# decline-curve-analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  system_card.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: DCA_package.yml  codeql.yml
OFM Test/: IA.yaml  mdb2csv.py  ofm_daily2adca.py
ci/: testkomodo.sh
dca/: __init__.py  decline_curve_analysis.py  models.py  optimization.py  timeseries.py  utils.py
dca/adca/: __init__.py  __main__.py  adca.py  cmd_init.py  dataloaders.py  load_yaml.py  postprocess.py  utils.py  well.py
dca/datasets/: __init__.py  dummy_data.py  field_production_monthly.csv  utils.py
docs/: adca.rst  adca_faq.rst  adca_tutorial.rst  conf.py  dca.rst  dca_api.rst  dca_report.rst  developer_documentation.rst  index.rst  installation.rst  introduction.rst  methodology.rst  user_guide.rst
docs/plots/: plot_ar1_simulation.py  plot_arps_and_exponential.py  plot_curve_shift.py  plot_dataframe_columns.py  plot_dca_contours.py  plot_dca_intro.py  plot_dca_parameters.py  plot_log_vs_nolog.py  plot_mathematical_model.py  plot_preprocessing.py  plot_rmse_vs_mae.py  plot_sodir_statfjord.py  plot_weighting_by_recency.py  plot_with_hypertuning_on_real_data.py
examples/: README.rst  plot_arps.py  plot_arps_fit.py  plot_arps_methods.py  plot_data_cleaning.py  plot_future_simulations.py  plot_loss_function_params.py  plot_models_with_increasing_complexity.py  plot_prior_effect.py  plot_simulation_game.py  plot_uncertainty.py  plot_well_plotting.py
tests/adca/: test_adca.py  test_dataloaders.py  test_utils.py  test_well.py
tests/dca/: test_datasets.py  test_decline_curve_analysis.py  test_models.py  test_optimization.py  test_timeseries.py
